# paper-cli

./: Cargo.toml  README.md  install.sh  package.json  paper.js
.github/workflows/: release.yml
paper-tauri/: Cargo.toml  README.md  build.sh
paper-tauri/src/: index.html
paper-tauri/src-tauri/: Cargo.toml  tauri.conf.json
paper-tauri/src-tauri/src/: main.rs
scripts/: test.js
src/: main.rs  server.rs
test/: README.md  code-blocks.md  images.md  large.md  not-found.md  special-chars.md
