[package]
name = "paper-tauri"
version = "1.0.0"
description = "极速 Markdown 预览工具"
authors = ["jqlong17"]
license = "MIT"
repository = "https://github.com/jqlong17/paper-cli"
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
pulldown-cmark = "0.10"
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
