[package]
name = "paper-tauri"
version = "1.0.0"
description = "极速 Markdown 预览工具"
authors = ["jqlong17"]
license = "MIT"
repository = "https://github.com/jqlong17/paper-cli"
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-read-file", "fs-exists"] }
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
