[package]
name = "paper-tauri"
version = "1.0.0"
description = "极速 Markdown 预览工具"
authors = ["jqlong17"]
license = "MIT"
repository = "https://github.com/jqlong17/paper-cli"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
